--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "nodemon Server/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+}
+,
   "author": "",
   "license": "ISC",
   "dependencies": {
