--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,11 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon Server/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-}
-,
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -32,5 +30,7 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
